Applied recipes FixJellyIssues, AddOrModernizeJenkinsFile, AddDependencyCheck, MigrateJUnitTestCase, AddPluginsBom, UpgradeNextMajorParentVersion, UpgradeBomVersion, RemoveDependencyVersionOverride, RemoveExtraMavenProperties, UpgradeToJava17, MigrateJUnitTestCase, AddOrModernizeJenkinsFile, AddDependencyCheck